_includes/manuals/1.7/4.5.2_cli_success.md

There was a set of common commands identified as necessary for basic Foreman management, we called it "success story" and [track](http://projects.theforeman.org/issues/3297) the progres of its implementation. The commands could also serve as a basic hammer cookbook.

The goal is to provision bare metal host on a clean install of Foreman. The following steps are necessary:

* Create smart proxy
<pre>
hammer proxy create --name myproxy
                    --url https://proxy.my.net:8443
</pre>
* Create architecture
<pre>
hammer architecture create --name x86_64
</pre>
* Create new subnet
<pre>
hammer subnet create --name "My Net"
                     --network "192.168.122.0"
                     --mask "255.255.255.0"
                     --gateway "192.168.122.1"
                     --dns-primary "192.168.122.1"
</pre>
* Import existing subnet from a proxy
    missing, see [#3355](http://projects.theforeman.org/issues/3355)
* Create new domain
<pre>
hammer domain create --name "my.net"
                     --fullname "My network"
</pre>
* Associate domain with smart proxy
<pre>
hammer domain update --id 1 --dns-id 1
</pre>
* Associate subnet with domain
<pre>
hammer subnet update --id 1 --domain-ids 1
</pre>
* Associate subnet with smart proxy (DHCP, TFTP, DNS)
<pre>
hammer subnet update --id 1
                     --dhcp-id 1
                     --tftp-id 1
                     --dns-id 1
</pre>
* Create new partition table
<pre>
hammer partition_table create --name "Redhat test"
                              --file /tmp/rh_test.txt
</pre>
* Create new operating system
<pre>
hammer os create --name RHEL
                 --major 6
                 --minor 4
</pre>
* Create new provisioning template
<pre>
hammer template create --name "kickstart mynet"
                       --type provision
                       --file /tmp/ks.txt
</pre>
* Edit existing pre-defined provisioning template
<pre>
hammer template dump --id 4 > /tmp/ks.txt
vim /tmp/ks.txt
hammer template update --id 4 --file /tmp/ks.txt
</pre>
* Associate applicable operating system with pre-defined provisioning template
<pre>
hammer template update --id 1 --operatingsystem-ids 1
</pre>
* Associate operating system with architecture
<pre>
hammer os update --id 1 --architecture-ids 1
</pre>
* Associate operating system with partition table
<pre>
hammer os update --id 1 --ptable-ids 1
</pre>
* Associate operating system with installation medium
<pre>
hammer os update --id 1 --medium-ids 1
</pre>
* Associate operating system with provisioning templates
<pre>
hammer os update --id 1 --config-template-ids 1
</pre>
* Create Libvirt compute resource
<pre>
hammer compute_resource create --name libvirt
                               --url "qemu:///system"
                               --provider Libvirt
</pre>
* Import Puppet classes
<pre>
hammer proxy import-classes --id myproxy
</pre>
* Create a host
<pre>
hammer host create --name "clitest.mynet.com"
                   --ip "192.168.122.5"
                   --host-group-id 1
                   --compute-resource-id 1
                   --interface "type=network,model=virtio,network=default"
                   --volume "capacity=10G"
                   --compute-attributes "start=true"
</pre>
